refactor(core/plugins): switch to enhanced syntax (switch expressions, `toList()`) and add `@Nullable` annotations
- refactor plugins related classes
- add annotations for null safety
- use enhanced syntax for easy maintainance